--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</style>
 </head>
 <body>
-<a href="idex.html">Home</a>
+<a href="index.html">Home</a>
 <a href="course.html">Course</a>
 <a href="teachers.html">Teachers Team</a>
 <a href="gallry.html">Gallry</a>
