--- a/teachers.html
+++ b/teachers.html
@@ -16,7 +16,7 @@
 	</style>
 </head>
 <body>
-<a href="idex.html">Home</a>
+<a href="inidex.html">Home</a>
 <a href="course.html">Course</a>
 <a href="teachers.html">Teachers Team</a>
 <a href="gallry.html">Gallry</a>
